# mpu6050

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz
launch/: mpu6050.launch  mpu6050_display.launch
scripts/: mpu_node.cpp
urdf/: mpu.xacro
